--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,7 +17,7 @@ html {
 body {
   color: #545149;
   background-color: #f4f1ec;
-  font-family:'Bungee', sans-serif;
+  font-family:'Source Sans Pro', sans-serif;
   font-size: 24px;
 }
 
