--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,9 +6,23 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1.5em;
-};
+    padding:1.5em;
+}
 
-nav span{
-    font-family: 'Bungee', sans-serif;
+.nav-right {
+    font-family:'Source Sans Pro';
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 30px;
+    margin: 1.5em;
+}
+
+.logo {
+    margin: 1.5em;
+    font-size: 30px;
+}
+
+.fa-angle-double-down {
+    color:red
 }
