Adding spans in html file for error messages. Adding display messages via jQuery to show an animated error message for empty tweets and tweets over 140 characters.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -50,3 +50,19 @@ section.new-tweet {
 .charOver {
 	color: red;
 }
+
+#error-msg {
+	display:flex;
+	justify-content: space-evenly;
+}
+
+.errors {
+	display:flex;
+	border: 3.5px solid red;
+	padding:15px;
+}
+
+.fa-circle-exclamation {
+	margin-left: 10px;
+	margin-right: 10px;
+}
