--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -22,3 +22,14 @@
     flex-direction: column;
     color: white;
 }
+
+@media only screen and (min-width:1024px) {
+    .tweeter-header {
+        width: 25%;
+        float: left;
+        margin: 4.5em;
+        margin-top:3em;
+        padding: 1em;
+        height: auto;
+    }
+  }
